Add: Loading of MdFiles and their Frontmatter
- loading in frontmatter values (title, dates, tags, published)
- Add: check if markdown file is valid (has frontmatter)
- Add: setting raw file to be w/o frontmatter.
- Add: When a markdown file is created, the "raw" field should hold the
markdown file without it's frontmatter.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.23"
 clap = { version = "4.0.27", features = ["derive"] }
 glob = "0.3.0"
