--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 chrono = "0.4.23"
 clap = { version = "4.0.27", features = ["derive"] }
 glob = "0.3.0"
+pulldown-cmark = "0.9.2"
+slugify = "0.1.0"
