--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.23"
 clap = { version = "4.0.27", features = ["derive"] }
+colored = "2.0.0"
 glob = "0.3.0"
 pulldown-cmark = "0.9.2"
 slugify = "0.1.0"
