--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,7 @@ clap = { version = "4.0.27", features = ["derive"] }
 colored = "2.0.0"
 glob = "0.3.0"
 pulldown-cmark = "0.9.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9.16"
 slugify = "0.1.0"
 tera = "1.17.1"
