--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,14 @@ edition = "2021"
 chrono = "0.4.23"
 clap = { version = "4.0.27", features = ["derive"] }
 colored = "2.0.0"
+eyre = "0.6.8"
 glob = "0.3.0"
+html-escape = "0.2.13"
+lazy_static = "1.4.0"
 pulldown-cmark = "0.9.2"
+regex = "1.7.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.16"
 slugify = "0.1.0"
+syntect = "5.0.0"
 tera = "1.17.1"
