--- a/test_site/_esker/config.yaml
+++ b/test_site/_esker/config.yaml
@@ -16,3 +16,10 @@ ignored_directories: ["dailies", "jots", "work", "media", "templates"]
 
 # the url you wish to use for grouping "tags" under
 tags_url: "tags"
+
+
+# Add the name of a theme if you are using
+# to use a theme, you must have it in your themes directory, for ex:
+# _esker/themes/<theme_name>
+
+# theme: "weakty"
